Enabling color & setting up log aliases

--- a/os_agnostic/.gitconfig
+++ b/os_agnostic/.gitconfig
@@ -4,3 +4,10 @@
 	prompt = false
 [alias]
 	d = difftool
+[color]
+	ui = auto
+
+[alias]
+    lol = log --graph --decorate --pretty=oneline --abbrev-commit
+    lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
+    lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
